tests/format/misc/errors/js/import-assertions/invalid-export-from.mjs
export module x from "./module.wasm";
